# DATA-VALIDATION-API

./: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
rust-validation-api/: Cargo.toml
rust-validation-api/src/: lib.rs
src/: ffi.ts  index.ts  routes.ts  swagger.ts  validator.ts
